@@ -1,12 +1,9 @@
-#!/usr/bin/env python
+#!/usr/bin/env python2.7
 #
 # This file is managed by batou. Don't edit directly. Use the './batou update'
 # command to adjust versions.
 #
-# This needs to be able to run with a lot of Python versions
-# I'd like to support this for Python 3.3, 3.2, 2.7, 2.6, and 2.5
-# XXX Gotta test that fact.
-# Also, this file is intended to be as small as possible getting batou working
+# This file is intended to be as small as possible getting batou working
 # somehow and then use that code to continue.
 
 import os
@@ -58,4 +55,6 @@ os.environ['BATOU_VERSION'] = version
 os.environ['BATOU_DEVELOP'] = develop
 
 # Pass control over the bare-bone batou's bootstrapping code. Good luck!
-os.execv('.batou/bin/python', ['.batou/bin/python', '-c', 'import batou.bootstrap; batou.bootstrap.bootstrap()'] + sys.argv)
+os.execv('.batou/bin/python',
+         ['.batou/bin/python', '-c',
+          'import batou.bootstrap; batou.bootstrap.bootstrap()'] + sys.argv)
